recursion.cons.ismember.IsMember.scala.error
Erreur de compilation :
IsMember:8: error: not found: value isMenber
    return(isMenber(l.tail, v))
           ^